fix footer spacing

--- a/portfolio/src/container/Footer/Footer.scss
+++ b/portfolio/src/container/Footer/Footer.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 1rem 2rem;
-    max-width: 550px;
+    // width: 50%;
     box-shadow: 0 0 25px #fef4f5;
     border-radius: 10px;
 
@@ -173,6 +173,7 @@
 
   .app__3d-earth {
     height: 600px;
+    width: 45%;
   }
 
   .app__footer-msg-submitted {
@@ -212,7 +213,7 @@
   @media screen and (max-width: 750px) {
     .app__contact-form-container,
     .app__3d-earth {
-      width: 90%;
+      width: 85%;
     }
     .app__contact-form-container {
       padding: 1rem;
