--- a/portfolio/src/container/Testimonial/Testimonial.scss
+++ b/portfolio/src/container/Testimonial/Testimonial.scss
@@ -43,7 +43,8 @@
 
   @media screen and (max-width: 600px) {
     flex-direction: column;
-    margin: 0 2rem;
+    margin: 0;
+    width: 80%;
   }
 }
 
